feat: add doc Create Opening
